syntax = "proto3";

import "proc/proc.proto";

option go_package = "sigmaos/uprocsrv/proto";

message RunRequest {
  ProcProto procProto = 1;
}

message RunResult {
}

message AssignRequest {
  string realmStr = 1;
}

message AssignResult {
  bool oK = 1;
}

message WarmBinRequest {
  string realmStr = 1;
  string program = 2;
  string buildTag = 3;
}

message WarmBinResult {
  bool oK = 1;
}
